--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "zodream/helpers": "*"
+        "zodream/helpers": "*",
+        "zodream/zodream": "*"
     },
     "autoload": {
         "psr-4": {
