--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "zodream/helpers": "*"
+        "php": ">=8.0",
+        "zodream/helpers": "^5.0"
     },
     "autoload": {
         "psr-4": {
