--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         {
             "name" : "Jason Zou",
             "email" : "zodream@fixmail.com",
-            "homepage" : "http://www.zodream.cn/",
+            "homepage" : "https://www.zodream.cn/",
             "role" : "Developer"
         }
     ],
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "zodream/helpers": "^5.0"
     },
     "autoload": {
