--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "zodream/helpers": "^5.0"
+        "zodream/helpers": "dev-master"
     },
     "autoload": {
         "psr-4": {
