--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=8.1",
-        "zodream/helpers": "dev-master"
+        "zodream/helpers": "dev-master",
+        "zodream/zodream": "dev-master"
     },
     "autoload": {
         "psr-4": {
